--- a/modules/backend/layouts/_mainmenu.htm
+++ b/modules/backend/layouts/_mainmenu.htm
@@ -170,7 +170,7 @@
                         </span>
 
                         <span class="nav-label">
-                            Traducciones
+                            Traducciones <?php echo $this->user ?>
                         </span>
                     </a>
                 </li>
