--- a/modules/backend/layouts/_mainmenu.htm
+++ b/modules/backend/layouts/_mainmenu.htm
@@ -2,7 +2,7 @@
     $activeItem = BackendMenu::getActiveMainMenuItem();
     $mySettings = System\Classes\SettingsManager::instance()->listItems('mysettings');
     $navbarMode = Backend\Models\BrandSetting::get('menu_mode', 'inline');
-    use October\Rain\Auth\Models\Role as RoleBase;
+    use Backend\Models\UserRole as RoleBase;
     $arole = RoleBase::findOrFail(2);
 ?>
 
