--- a/modules/backend/layouts/_mainmenu.htm
+++ b/modules/backend/layouts/_mainmenu.htm
@@ -137,7 +137,7 @@
                             </a>
                         </li>
 
-                        <?php } elseif ( $arole =='publisher' $item->iconSvg != 'modules/system/assets/images/cog-icon.svg' && $item->iconSvg != 'modules/cms/assets/images/cms-icon.svg' && $item->iconSvg != 'modules/backend/assets/images/estadisticas.svg'){?>
+                        <?php } elseif ( $arole =='publisher' && $item->iconSvg != 'modules/system/assets/images/cog-icon.svg' && $item->iconSvg != 'modules/cms/assets/images/cms-icon.svg' && $item->iconSvg != 'modules/backend/assets/images/estadisticas.svg'){?>
 
                         <li class="svg-icon-container svg-active-effects">
                             <a href="<?= $item->url ?>">
