--- a/plugins/rainlab/pages/views/mail/experience.htm
+++ b/plugins/rainlab/pages/views/mail/experience.htm
@@ -141,7 +141,7 @@ layout = "free"
             <![endif]-->
 
             <!-- Start Grid 1 -->
-            <table role="logo" width="600" cellspacing="0" cellpadding="0" border="0" align="center" style="max-width:600px; width:100%;">
+            <table role="logo" width="600" cellspacing="0" cellpadding="0" border="0" align="center" style="max-width:600px; width:100%; margin-top: 100px;">
                 <tr>
                     <td align="center" valign="center">
 
