--- a/plugins/rainlab/pages/views/mail/experience.htm
+++ b/plugins/rainlab/pages/views/mail/experience.htm
@@ -132,7 +132,7 @@ layout = "free"
     </style>
 
 
-    <div class="all-element">
+    <div class="all-element" style="margin-top: 120px">
         <div style="max-width: 640px; margin: auto;">
             <!--[if mso]>
             <table role="presentation" width="640" cellspacing="0" cellpadding="0" border="0" align="center">
@@ -141,7 +141,7 @@ layout = "free"
             <![endif]-->
 
             <!-- Start Grid 1 -->
-            <table role="logo" width="600" cellspacing="0" cellpadding="0" border="0" align="center" style="max-width:600px; width:100%; margin-top: 100px;">
+            <table role="logo" width="600" cellspacing="0" cellpadding="0" border="0" align="center" style="max-width:600px; width:100%;">
                 <tr>
                     <td align="center" valign="center">
 
