--- a/plugins/rainlab/pages/views/mail/experience.htm
+++ b/plugins/rainlab/pages/views/mail/experience.htm
@@ -132,7 +132,7 @@ layout = "free"
     </style>
 
 
-    <div class="all-element" style="margin-top: 120px">
+    <div class="all-element">
         <div style="max-width: 640px; margin: auto;">
             <!--[if mso]>
             <table role="presentation" width="640" cellspacing="0" cellpadding="0" border="0" align="center">
@@ -148,7 +148,7 @@ layout = "free"
                         <table role="logo" width="600" cellspacing="0" cellpadding="0" border="0" align="center" style="max-width:600px; width:100%;">
                             <tr>
                                 <td align="left" valign="top">
-                                    <div class="logo">
+                                    <div class="logo" style="margin-top: 120px">
                                         <a href="{{experience.urlApp}}">
                                         <img class="element0" src="{{experience.urlApp}}storage/app/media/uploaded-files/templates/cadiz-logo.jpg" alt="">
                                         </a>
