--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -110,7 +110,7 @@ input:-webkit-autofill {
   padding-top: 0px !important;
   top: 20px;
   right: 20px;
-  display: none;
+  display: block;
 }
 
 .elements .menu-list ul li .dark-menu {
