--- a/plugins/rainlab/pages/assets/css/style-event.css
+++ b/plugins/rainlab/pages/assets/css/style-event.css
@@ -929,5 +929,6 @@
   z-index: 100;
   background-color: white; }
   .section-img img {
+    max-width: 100%;
     width: 100%;
     height: auto; }
