--- a/plugins/rainlab/pages/assets/css/style-event.css
+++ b/plugins/rainlab/pages/assets/css/style-event.css
@@ -930,5 +930,6 @@
   background-color: white; }
   .section-img img {
     max-width: 100%;
+    object-fit: cover;
     width: 100%;
     height: auto; }
