--- a/plugins/rainlab/pages/assets/css/style-event.css
+++ b/plugins/rainlab/pages/assets/css/style-event.css
@@ -931,5 +931,5 @@
   .section-img img {
     max-width: 100%;
     object-fit: cover;
-    width: 100%;
-    height: auto; }
+    width: 100% !important;
+    height: auto !important; }
