--- a/modules/backend/assets/scss/october.scss
+++ b/modules/backend/assets/scss/october.scss
@@ -1475,7 +1475,7 @@ nav#layout-mainmenu ul li .mainmenu-accountmenu li:first-child a:hover:after, na
   width: 296px;
   padding: 0px;
   box-shadow: none !important;
-  font-family: 'AvenirNext-Medium' !important;
+  font-family: 'Avenir-Medium', sans-serif !important;
   background-color: #175DA3;
   .is-today .pika-button {
     background: $hover-blue !important;
