--- a/modules/backend/layouts/_mainmenu.htm
+++ b/modules/backend/layouts/_mainmenu.htm
@@ -83,21 +83,25 @@
                                 </li>
                             <?php } ?>
 
-                            <li class="svg-icon-container svg-active-effects">
-                                <a href="/backend/backend/empresa">
-                                    <span class="nav-icon">
-                                        <?php if ($item->iconSvg): ?>
-                                            <img class="svg-icon" src="<?= config('app.urlApp') ?>modules/system/assets/images/empresas.svg">
-                                        <?php endif ?>
+                            <?php if( $arole =='publisher' ){ ?>
 
-                                        <i class="<?= $item->iconSvg ? 'svg-replace' : null ?> <?= $item->icon ?>"></i>
-                                    </span>
+                                <li class="svg-icon-container svg-active-effects">
+                                    <a href="/backend/backend/empresa">
+                                        <span class="nav-icon">
+                                            <?php if ($item->iconSvg): ?>
+                                                <img class="svg-icon" src="<?= config('app.urlApp') ?>modules/system/assets/images/empresas.svg">
+                                            <?php endif ?>
 
-                                    <span class="nav-label">
-                                        Empresas
-                                    </span>
-                                </a>
-                            </li>
+                                            <i class="<?= $item->iconSvg ? 'svg-replace' : null ?> <?= $item->icon ?>"></i>
+                                        </span>
+
+                                        <span class="nav-label">
+                                            Empresas
+                                        </span>
+                                    </a>
+                                </li>
+
+                            <?php } ?>
 
                         <?php } ?>
 
