eventos ocultar enlaces vacios

--- a/themes/default/layouts/evento.htm
+++ b/themes/default/layouts/evento.htm
@@ -136,5 +136,24 @@ code = "redes-sociales"
     <script type="text/javascript" src="{{url('/')}}/plugins/rainlab/pages/assets/js/style.js"></script>
 
 
+  
+    <script type="text/javascript">
+    $(document).ready(function() {
+       
+        var divbtn = $(".send-info");
+        var btnahref = $(".button-send-info a").attr("href");
+        if(btnahref == '#'){
+            divbtn.hide();
+        }
+
+        var spandownl = $(".download");
+        var imgsrc = $(".cartel").attr("src");
+        if(imgsrc == '/storage/app/media/uploaded-files/templates/cartel-caballos.jpg' || imgsrc == '/cadizturismo/storage/app/media/uploaded-files/templates/cartel-caballos.jpg' ){
+            spandownl.hide();
+        }
+        
+    });
+    </script>
+
   </body>
 </html>
