--- a/themes/default/partials/site/footer.htm
+++ b/themes/default/partials/site/footer.htm
@@ -27,7 +27,7 @@
         </div>
       </div>
       <div class="copy-social-container">
-        <p class="date">&copy; Patronato Provincial de Turismo de Cádiz</p>
+        <p class="date">&copy; Patronato Provincial de Turismo de Cádiz {{ "now"|date("Y") }}</p>
         <div class="social">
           <a href="{{home.facebook}}"><img src="{{url('/')}}/plugins/rainlab/pages/assets/svg/fb-icon.svg" alt="facebook"></a>
           <a href="{{home.twitter}}"><img src="{{url('/')}}/plugins/rainlab/pages/assets/svg/tw-icon.svg" alt="twitter"></a>
