--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -3987,6 +3987,7 @@ html, body {
       height: 60px !important;
       .date {
         margin-right: 0px;
+        text-align: center;
       }
       .social {
         margin-bottom: 15px;
