--- a/plugins/rainlab/pages/widgets/eventolist/partials/_treebranch.htm
+++ b/plugins/rainlab/pages/widgets/eventolist/partials/_treebranch.htm
@@ -20,7 +20,7 @@
                 <div>
                     <?= e($pageObj->page->getViewBag()->property('title')) ?>
                     <p><span class="comment date_start_pretty_num"><?php if(isset($pageObj->date_start_pretty_num)){echo e($pageObj->date_start_pretty_num);} ?></span></p>
-                    <?php echo $pageObj?>
+                    <?php echo json_encode($pageObj) ?>
                     <?php if ($pageObj->page->getViewBag()->property('is_hidden') == 1): ?>
                         <p><span class="comment borrador">BORRADOR</span></p>
                     <?php endif ?>
