--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -2384,6 +2384,22 @@ html, body {
   display: none;
 }
 
+
+/* LISTAS  */
+.section-txt {
+  ol, ul {
+    padding-left: 0px;
+    list-style-type: none;
+    li {
+      color: #9b9b9b;
+      font-size: 18px;
+      line-height: 33px;
+      margin-bottom: 10px !important;
+    }
+  }
+}
+
+
 @media (max-width: 1250px) and (min-width: 840px) {
   .publis {
     width: auto;
