--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3071,7 +3071,7 @@ html, body {
       border-bottom: 1px solid #CECECE; } }
 
 @media (max-width: 920px) and (min-width: 601px) {
-  .section-txt p, .section-txt-village p, .section-txt-comarca p {
+  .section-txt p, .section-txt-village p, .section-txt-comarca p, .section-txt ol, .section-txt ul {
     width: 86% !important; }
   .header-search {
     height: auto !important;
