comment end date pretyy

--- a/themes/default/partials/allevents.htm
+++ b/themes/default/partials/allevents.htm
@@ -29,7 +29,7 @@
             <div class="overlay-img"></div>
             <img class="rec-img" src="{{events[i].viewBag.cover}}">
             <div class="txt-container">
-              <p class="date">{{events[i].date_start_pretty_day}} {{events[i].date_start_pretty_month|_}} - {{events[i].date_end_pretty_day}} {{events[i].date_end_pretty_month|_}}</p>
+              <p class="date">{{events[i].date_start_pretty_day}} {{events[i].date_start_pretty_month|_}} <!-- - {{events[i].date_end_pretty_day}} {{events[i].date_end_pretty_month|_}}--></p>
               <p class="name">{{events[i].viewBag.title}}</p>
               <img class="separator" src="{{preurl}}/storage/app/media/uploaded-files/templates/small-yellow-separator.svg">
               <div class="icons">
@@ -68,7 +68,7 @@
             <div class="overlay-img"></div>
             <img class="rec-img" src="{{events[i].viewBag.cover}}">
             <div class="txt-container">
-              <p class="date">{{events[i].date_start_pretty_day}} {{events[i].date_start_pretty_month|_}} - {{events[i].date_end_pretty_day}} {{events[i].date_end_pretty_month|_}}</p>
+              <p class="date">{{events[i].date_start_pretty_day}} {{events[i].date_start_pretty_month|_}} <!-- - {{events[i].date_end_pretty_day}} {{events[i].date_end_pretty_month|_}} --></p>
               <p class="name">{{events[i].viewBag.title}}</p>
               <img class="separator" src="{{preurl}}/storage/app/media/uploaded-files/templates/small-yellow-separator.svg">
               <div class="icons">
