--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -460,6 +460,7 @@ html, body {
   padding-bottom: 70px;
   margin-top: 0px;
   margin-bottom: 0px;
+  border-radius: 0px !important;
   form {
     width: auto;
     margin-left: 10px;
