--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3866,3 +3866,6 @@ video {
   max-width: 90%;
   margin: 20px auto;
   display: table; }
+
+.section-txt .txt-container .desc {
+  min-width: 686px; }
