--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3867,5 +3867,6 @@ video {
   margin: 20px auto;
   display: table; }
 
-.section-txt .txt-container .desc {
-  min-width: 686px; }
+@media (min-width: 800px) {
+  .section-txt .txt-container .desc {
+    min-width: 686px; } }
