--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3870,3 +3870,6 @@ video {
 @media (min-width: 800px) {
   .section-txt .txt-container .desc {
     min-width: 686px; } }
+
+#map iframe {
+  margin-top: 0px; }
