--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -2377,13 +2377,13 @@ html, body {
     width: auto !important;
     text-align: center; }
   .whats-on .right-photos {
-    margin-top: 80px !important;
+    margin-top: 140px !important;
     width: 100% !important; }
   .whats-on .right-photos .element {
     position: relative !important;
     width: 100% !important; }
-  .whats-on .right-photos #element2, .whats-on .right-photos #element3, .whats-on .right-photos #element4 {
-    top: 73px !important;
+  .whats-on .right-photos #element1, .whats-on .right-photos #element2, .whats-on .right-photos #element3, .whats-on .right-photos #element4 {
+    top: 0px !important;
     background-size: cover !important; }
   .secret-routes .txt-container {
     width: 80% !important;
