--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -2804,6 +2804,7 @@ html, body {
   .whats-on {
     height: auto !important;
     margin-top: 40px !important;
+    margin-bottom: 60px !important;
   }
   .whats-on .left-txt {
     text-align: center;
