--- a/themes/default/layouts/evento.htm
+++ b/themes/default/layouts/evento.htm
@@ -158,7 +158,7 @@ code = "redes-sociales"
         console.log(html);
         html = html.replace("&nbsp;","");
         icons.html(html);
-        console.log(icons);
+        console.log(icons.html());
     });
     </script>
 
