--- a/themes/default/layouts/evento.htm
+++ b/themes/default/layouts/evento.htm
@@ -153,7 +153,7 @@ code = "redes-sociales"
         }
 
 
-        var icons = $(".icons-row");
+        var icons = $(".icons-row > .i-container");
         var html = icons.html();
         console.log(html);
         html = html.replace("&nbsp;","");
