--- a/themes/default/layouts/evento.htm
+++ b/themes/default/layouts/evento.htm
@@ -152,11 +152,12 @@ code = "redes-sociales"
             spandownl.hide();
         }
 
-        $(".icons-row > .i-container > .also-feature").each(function(){
+        $(".i-container > .also-feature").each(function(){
         	    var html = $(this).html();
               console.log(html);
               html = html.replace("&nbsp;","");
               $(this).html(html);
+              console.log($(this).html(html));
         });
 
         $(".icons-row > .i-container").each(function(){
@@ -177,7 +178,7 @@ code = "redes-sociales"
         htmlC = htmlC.replace("&nbsp;","");
         iconsC.html(htmlC);
 
-        
+
         console.log(icons.html());
 
     });
