--- a/themes/default/layouts/evento.htm
+++ b/themes/default/layouts/evento.htm
@@ -157,7 +157,7 @@ code = "redes-sociales"
               console.log(html);
               html = html.replace("&nbsp;","");
               $(this).html(html);
-              console.log($(this).html(html));
+              console.log($(this).html());
         });
 
         $(".icons-row > .i-container").each(function(){
