--- a/themes/default/layouts/evento.htm
+++ b/themes/default/layouts/evento.htm
@@ -183,9 +183,7 @@ code = "redes-sociales"
         console.log(htmlT);
         htmlT = htmlT.replace(/&nbsp;/g,"");
         iconsT.html(htmlT);
-
-
-        console.log(icons.html());
+        console.log(iconsT.html());
 
     });
     </script>
