--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -3600,6 +3600,10 @@ html, body {
     padding-top: 92px !important;
     padding-bottom: 50px !important;
   }
+  .section-txt.section-info {
+    padding-top: 10px !important;
+    padding-bottom: 20px !important;
+  }
   .section-txt .big-number-container, .section-txt-village .big-number-container {
     height: 175px !important;
   }
