--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -2937,6 +2937,9 @@ html, body {
   .section-txt, .section-txt-village {
     padding-top: 92px !important;
     padding-bottom: 50px !important; }
+  .section-txt.section-info {
+    padding-top: 10px !important;
+    padding-bottom: 20px !important; }
   .section-txt .big-number-container, .section-txt-village .big-number-container {
     height: 175px !important; }
   .section-txt .big-number-container .step, .section-txt-village .big-number-container .step {
